Changelog
=========

0.3 - unreleased
----------------


0.2 - 2010-10-06
----------------

- Added ``munin.zope`` and ``Products.signalstack`` as new dependencies.
  [hannosch]

0.1 - 2010-10-05
----------------

- Initial release