@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1</version>
+  <version>2</version>
   <dependencies>
+    <dependency>profile-plone.app.caching:default</dependency>
     <dependency>profile-plone.app.discussion:default</dependency>
     <dependency>profile-Products.PloneFormGen:default</dependency>
     <dependency>profile-intranett.theme:default</dependency>
