@@ -26,6 +26,7 @@ setup(name='intranett.policy',
           'experimental.catalogqueryplan',
           'munin.zope',
           'Plone',
+          'plone.app.caching',
           'plone.app.discussion',
           'Products.CMFQuickInstallerTool',
           'Products.GenericSetup',
