@@ -4,6 +4,9 @@ Changelog
 0.3 - unreleased
 ----------------
 
+- Include ``plone.app.caching`` as a dependency.
+  Refs https://jira.jarn.com/browse/INTRANETT-76.
+  [hannosch]
 
 0.2 - 2010-10-06
 ----------------
